Remove `--add-opens` from java9/10 settings