@@ -168,8 +168,6 @@ tasks.withType(Test) {
       description "Runs $cloned.name under java 9"
       // TODO: Pull from environment variable:
       executable = "$java9Home/bin/java"
-      jvmArgs '--add-opens'
-      jvmArgs 'java.base/jdk.internal.loader=ALL-UNNAMED'
       project.afterEvaluate {
         exclude project.testJava8Only
       }
@@ -183,8 +181,6 @@ tasks.withType(Test) {
       description "Runs $cloned.name under java 10"
       // TODO: Pull from environment variable:
       executable = "$java10Home/bin/java"
-      jvmArgs '--add-opens'
-      jvmArgs 'java.base/jdk.internal.loader=ALL-UNNAMED'
       project.afterEvaluate {
         exclude project.testJava8Only
       }
